# bscand

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  README.md  bscand.cfg  configure.ac
patches/: 01-sane-backends-1.0.25-multiple-access-fix.patch  01-sane-backends-1.0.25-multiple-access-fix_v2.patch  01-sane-backends-1.0.27-multiple-access-fix_v2.patch  02-sane-backends-1.0.25-notify-open.patch  02-sane-backends-1.0.25-notify-open_v2.patch  03-sane-backends-1.0.25-failsafe_v2.patch  03-sane-backends-1.0.27-failsafe_v2.patch
src/: Makefile.am  main.c  process.c  process.h  stiff.c
